[package]
name = "rust_ib2c"
version = "0.1.0"
edition = "2024"

[dependencies]
ib2c_macros = { path = "./src/ib2c_macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rust_ib2c_shared_data = { path = "../rust_ib2c_shared_data" }
num-traits = "0.2.19"
data_types = { path = "../data_types" }
typenum = "1.18.0"

[features]
print_state = []